# airy

./: .bazelignore  .bazelrc  .env  .env.example  .eslintrc  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.json  .zshrc  BUILD  CONTRIBUTING.md  LICENSE  README.md  VERSION  WORKSPACE  airy.yaml  bazel-steward.yaml  bazel.tsconfig.json  checkstyle.xml  cli.yaml  code_of_conduct.md  dev.tsconfig.json  go.mod  go.sum  go_repositories.bzl  jaas.config  jest.config.ts  lint.sh  main.go  maven_install.json  netlify.toml  package.json  report.20210702.170342.34544.0.001.json  report.20210910.163217.9432.0.001.json  repositories.bzl  res.yaml  runWebpackDevServer.js  tmp.yaml  tmp2.yaml  (+2 more)
docs/: .gitignore  BUILD.bazel  README.md  _redirects  api.md  bazel.md  chat-plugin.md  config.toml  data-model.md  design.md  developers-manual.md  docusaurus.config.js  glossary.md  kafka.md  netlify.toml  package.json  sidebars.js  user-guide.md  webhook.md  websocket.md
docs/cli-doc/: BUILD  generate_cli_docs.go  go.mod  go.sum  util.go
docs/content/: _index.md
docs/content/api/: _index.md
docs/content/bazel/: _index.md
docs/content/conventions/: _index.md  javascript.md  react.md
docs/content/kafka/: _index.md
docs/conventions/: javascript.md
docs/docs/: api.md  changelog.md  chat-plugin.md  design.md  developers-manual.md  glossary.md  index.md  kafka.md  user-guide.md  webhook.md  websocket.md
docs/docs/api/: authentication.md  contacts-response-payload.md  contacts-response-payload.mdx  contacts.md  event-payloads.mdx  http.md  (+5 more)
docs/static/: custom.css
(+4656 files in other folders)
