load("@com_github_airyhq_bazel_tools//lint:buildifier.bzl", "check_pkg")
load("@com_github_airyhq_bazel_tools//lint:prettier.bzl", "prettier")

prettier(
    name = "prettier",
    srcs = glob([
        "**/*.md",
        "**/*.js",
        "**/*.jsx",
        "**/*.ts",
        "**/*.tsx",
        "**/*.scss",
        "**/*.css",
    ]),
    config = "//:.prettierrc.json",
    ignore = "//:.prettierignore",
)

check_pkg(name = "buildifier")
